toutes les pages en FR, contenu index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,26 @@
 </head>
 
 <body>
-    
+
+    <h1>Exercices finaux, par PRP</h1>
+
+    <nav>
+        <ul>
+            <li><a href="./index.html">Accueil</a></li>
+            <li><a href="./pages/rotation_images.html">Rotation d'images</a></li>
+            <li><a href="./pages/calculatrice.html">Calculatrice</a></li>
+            <li><a href="./pages/formulaire.html">Formulaire</a></li>
+            <li class="inactive"><a href="./pages/juste_prix.html">Juste Prix</a></li>
+            <li class="inactive"><a href="./pages/morpion.html">Morpion</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <p>
+            Voici une démonstration de ce que j'ai pu réaliser avec un peu de <a title="Page HTML sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language" target="_blank" rel="noopener noreferrer">HTML</a>, une touche de <a title="Page CSS sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade" target="_blank" rel="noopener noreferrer">CSS</a> et un soupçon de <a title="A ne pas confondre avec Java 💩" href="http://javascriptisnotjava.com/" target="_blank" rel="noopener noreferrer">JavaScript</a>
+        </p>
+    </main>
+
 </body>
 
 </html>
