--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercices finaux, par PRP</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
@@ -14,12 +15,12 @@
 
     <nav>
         <ul>
-            <li><a href="./index.html">Accueil</a></li>
+            <li><a class="active" href="./index.html">Accueil</a></li>
             <li><a href="./pages/rotation_images.html">Rotation d'images</a></li>
             <li><a href="./pages/calculatrice.html">Calculatrice</a></li>
             <li><a href="./pages/formulaire.html">Formulaire</a></li>
-            <li class="inactive"><a href="./pages/juste_prix.html">Juste Prix</a></li>
-            <li class="inactive"><a href="./pages/morpion.html">Morpion</a></li>
+            <li><a class="ooo" href="./pages/juste_prix.html">Juste Prix</a></li>
+            <li><a class="ooo" href="./pages/morpion.html">Morpion</a></li>
         </ul>
     </nav>
 
