--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercices finaux, par PRP</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <script async src="./scripts/scripts.js"></script>
 </head>
 
 <body>
