Déclaration scripts/styles et ajout h1/nav sur autres pages

--- a/pages/formulaire.html
+++ b/pages/formulaire.html
@@ -6,9 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulaire, par PRP</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <script async src="./scripts/scripts.js"></script>
 </head>
 
 <body>
+
+    <h1>Formulaire, par PRP</h1>
+
+    <nav>
+        <ul>
+            <li><a href="./index.html">Accueil</a></li>
+            <li><a href="./pages/rotation_images.html">Rotation d'images</a></li>
+            <li><a href="./pages/calculatrice.html">Calculatrice</a></li>
+            <li><a class="active" href="./pages/formulaire.html">Formulaire</a></li>
+            <li><a class="ooo" href="./pages/juste_prix.html">Juste Prix</a></li>
+            <li><a class="ooo" href="./pages/morpion.html">Morpion</a></li>
+        </ul>
+    </nav>
     
 </body>
 
