--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Exercices finaux, par PRP</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <script async src="./scripts/scripts.js"></script>
+    <base href="./">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 
     <main>
         <p>
-            Voici une démonstration de ce que j'ai pu réaliser avec un peu de <a title="Page HTML sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language" target="_blank" rel="noopener noreferrer">HTML</a>, une touche de <a title="Page CSS sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade" target="_blank" rel="noopener noreferrer">CSS</a> et un soupçon de <a title="A ne pas confondre avec Java 💩" href="http://javascriptisnotjava.com/" target="_blank" rel="noopener noreferrer">JavaScript</a>
+            Voici une démonstration de ce que j'ai pu réaliser avec un peu de <a title="Page HTML sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language" target="_blank" rel="noopener noreferrer">HTML</a>, une touche de <a title="Page CSS sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade" target="_blank" rel="noopener noreferrer">CSS</a> et un soupçon de <a title="A ne pas confondre avec Java 💩" href="http://javascriptisnotjava.com/" target="_blank" rel="noopener noreferrer">JavaScript</a>.
         </p>
     </main>
 
