--- a/pages/rotation_images.html
+++ b/pages/rotation_images.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rotation d'images, par PRP</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-    <script async src="./scripts/scripts.js"></script>
+    <link rel="stylesheet" href="../styles/styles.css">
+    <script async src="../scripts/scripts.js"></script>
+    <base href="../">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <ul>
             <li><a href="./index.html">Accueil</a></li>
             <li><a class="active" href="./pages/rotation_images.html">Rotation d'images</a></li>
-            <li><a class="active" href="./pages/calculatrice.html">Calculatrice</a></li>
+            <li><a href="./pages/calculatrice.html">Calculatrice</a></li>
             <li><a href="./pages/formulaire.html">Formulaire</a></li>
             <li><a class="ooo" href="./pages/juste_prix.html">Juste Prix</a></li>
             <li><a class="ooo" href="./pages/morpion.html">Morpion</a></li>
