Début du travail sur la rotation d'images

--- a/pages/rotation_images.html
+++ b/pages/rotation_images.html
@@ -26,6 +26,19 @@
         </ul>
     </nav>
     
+    <main>
+
+        <h2>Remettez les images dans l'ordre !</h2>
+
+        <div id="imgrotate">
+            <img src="./assets/images/ow_1_tr.png" alt="1">
+            <img src="./assets/images/ow_2_br.png" alt="2">
+            <img src="./assets/images/ow_3_bl.png" alt="3">
+            <img src="./assets/images/ow_4_tl.png" alt="4">
+        </div>
+
+    </main>
+
 </body>
 
 </html>
