Cacher la page calculatrice, expliquer les menus grisés

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a class="active" href="./index.html">Accueil</a></li>
             <li><a href="./pages/rotation_images.html">Rotation d'images</a></li>
-            <li><a href="./pages/calculatrice.html">Calculatrice</a></li>
+            <li><a class="ooo" href="./pages/calculatrice.html">Calculatrice</a></li>
             <li><a href="./pages/formulaire.html">Formulaire</a></li>
             <li><a class="ooo" href="./pages/juste_prix.html">Juste Prix</a></li>
             <li><a class="ooo" href="./pages/morpion.html">Morpion</a></li>
@@ -28,7 +28,7 @@
 
     <main>
         <p>
-            Voici une démonstration de ce que j'ai pu réaliser avec un peu de <a title="Page HTML sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language" target="_blank" rel="noopener noreferrer">HTML</a>, une touche de <a title="Page CSS sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade" target="_blank" rel="noopener noreferrer">CSS</a> et un soupçon de <a title="A ne pas confondre avec Java 💩" href="http://javascriptisnotjava.com/" target="_blank" rel="noopener noreferrer">JavaScript</a>.
+            Voici une démonstration de ce que j'ai pu réaliser avec un peu de <a title="Page HTML sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language" target="_blank" rel="noopener noreferrer">HTML</a>, une touche de <a title="Page CSS sur Wikipédia FR" href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade" target="_blank" rel="noopener noreferrer">CSS</a> et un soupçon de <a title="A ne pas confondre avec Java 💩" href="http://javascriptisnotjava.com/" target="_blank" rel="noopener noreferrer">JavaScript</a>. Les entrées grisées dans le menu sont encore en cours de développement.
         </p>
     </main>
 
