--- a/pages/morpion.html
+++ b/pages/morpion.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="./index.html">Accueil</a></li>
             <li><a href="./pages/rotation_images.html">Rotation d'images</a></li>
-            <li><a href="./pages/calculatrice.html">Calculatrice</a></li>
+            <li><a class="ooo" href="./pages/calculatrice.html">Calculatrice</a></li>
             <li><a href="./pages/formulaire.html">Formulaire</a></li>
             <li><a class="ooo" href="./pages/juste_prix.html">Juste Prix</a></li>
             <li><a class="ooo" class="active" href="./pages/morpion.html">Morpion</a></li>
